--- a/main.ipynb
+++ b/main.ipynb
@@ -2,59 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "d484d813",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ArgumentError",
-     "evalue": "ArgumentError: Package QuadGK not found in current path.\n- Run `import Pkg; Pkg.add(\"QuadGK\")` to install the QuadGK package.",
-     "output_type": "error",
-     "traceback": [
-      "ArgumentError: Package QuadGK not found in current path.\n",
-      "- Run `import Pkg; Pkg.add(\"QuadGK\")` to install the QuadGK package.\n",
-      "\n",
-      "Stacktrace:\n",
-      "  [1] macro expansion\n",
-      "    @ ./loading.jl:2296 [inlined]\n",
-      "  [2] macro expansion\n",
-      "    @ ./lock.jl:273 [inlined]\n",
-      "  [3] __require(into::Module, mod::Symbol)\n",
-      "    @ Base ./loading.jl:2271\n",
-      "  [4] #invoke_in_world#3\n",
-      "    @ ./essentials.jl:1089 [inlined]\n",
-      "  [5] invoke_in_world\n",
-      "    @ ./essentials.jl:1086 [inlined]\n",
-      "  [6] require(into::Module, mod::Symbol)\n",
-      "    @ Base ./loading.jl:2260\n",
-      "  [7] eval\n",
-      "    @ ./boot.jl:430 [inlined]\n",
-      "  [8] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
-      "    @ Base ./loading.jl:2734\n",
-      "  [9] #invokelatest#2\n",
-      "    @ ./essentials.jl:1055 [inlined]\n",
-      " [10] invokelatest\n",
-      "    @ ./essentials.jl:1052 [inlined]\n",
-      " [11] (::VSCodeServer.var\"#217#218\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
-      "    @ VSCodeServer ~/.vscode-server/extensions/julialang.language-julia-1.127.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:24\n",
-      " [12] withpath(f::VSCodeServer.var\"#217#218\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
-      "    @ VSCodeServer ~/.vscode-server/extensions/julialang.language-julia-1.127.2/scripts/packages/VSCodeServer/src/repl.jl:276\n",
-      " [13] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
-      "    @ VSCodeServer ~/.vscode-server/extensions/julialang.language-julia-1.127.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
-      " [14] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
-      "    @ VSCodeServer.JSONRPC ~/.vscode-server/extensions/julialang.language-julia-1.127.2/scripts/packages/JSONRPC/src/typed.jl:67\n",
-      " [15] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#5#10\"{String})\n",
-      "    @ VSCodeServer ~/.vscode-server/extensions/julialang.language-julia-1.127.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:147\n",
-      " [16] top-level scope\n",
-      "    @ ~/.vscode-server/extensions/julialang.language-julia-1.127.2/scripts/notebook/notebook.jl:35"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using QuadGK\n",
     "using LinearAlgebra\n",
     "using Plots\n",
     "using FastGaussQuadrature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ac8e14f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7853981634006569, 5.568887000661535e-11)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "integral, err = quadgk(x -> sqrt(1 - x^2), 0, 1, rtol=1e-10)"
    ]
   }
  ],
