Fix execution counts and update integration limits in main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,6 +16,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89264d4d",
+   "metadata": {},
+   "source": [
+    "0~1の半径1の円の面積(積分)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dcca1712",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of the circle: 1.5707963267948966\n"
+     ]
+    }
+   ],
+   "source": [
+    "area = pi / 2\n",
+    "println(\"Area of the circle: \", area)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "456bef41",
    "metadata": {},
    "source": [
@@ -24,22 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "ac8e14f1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.7853981634006569, 5.568887000661535e-11)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integral of sqrt(1 - x^2) from 0 to 1: 1.5707963268013143 with error: 1.113777400132307e-10\n"
+     ]
     }
    ],
    "source": [
-    "integral1, err1 = quadgk(x -> sqrt(1 - x^2), 0, 1, rtol=1e-10)"
+    "integral1, err1 = quadgk(x -> sqrt(1 - x^2), -1, 1, rtol=1e-10)\n",
+    "println(\"Integral of sqrt(1 - x^2) from 0 to 1: \", integral1, \" with error: \", err1)"
    ]
   },
   {
@@ -52,22 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "72601a1e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.7853981634006569, 5.568890955167198e-11)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HCubature integral of sqrt(1 - x^2) from 0 to 1: 1.570796326801314 with error: 1.1137781910334396e-10\n"
+     ]
     }
    ],
    "source": [
-    "integral2, err2 = hcubature(x -> sqrt(1 - x[1]^2), [0.0], [1.0], rtol=1e-10)"
+    "integral2, err2 = hcubature(x -> sqrt(1 - x[1]^2), [-1.0], [1.0], rtol=1e-10)\n",
+    "println(\"HCubature integral of sqrt(1 - x^2) from 0 to 1: \", integral2, \" with error: \", err2)"
    ]
   }
  ],
