--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d484d813",
    "metadata": {},
    "outputs": [],
@@ -24,21 +24,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "dcca1712",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Area of the circle: 1.5707963267948966\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "area = pi / 2\n",
     "println(\"Area of the circle: \", area)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1741f637",
+   "metadata": {},
+   "source": [
+    "`FastGaussQuadrature`を用いた積分"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "065eacfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 100\n",
+    "x, w = gausslegendre(n)\n",
+    "f(x) = sqrt(1 - x^2)\n",
+    "integral1 = sum(w .* f.(x))\n",
+    "println(\"Integral using Gauss-Legendre: \", integral1)"
    ]
   },
   {
@@ -51,21 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ac8e14f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Integral of sqrt(1 - x^2) from -1 to 1: 1.5707963268013143 with error: 1.113777400132307e-10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "integral1, err1 = quadgk(x -> sqrt(1 - x^2), -1, 1, rtol=1e-10)\n",
-    "println(\"Integral of sqrt(1 - x^2) from -1 to 1: \", integral1, \" with error: \", err1)"
+    "integral2, err2 = quadgk(x -> sqrt(1 - x^2), -1, 1, rtol=1e-10)\n",
+    "println(\"Integral of sqrt(1 - x^2) from -1 to 1: \", integral2, \" with error: \", err2)"
    ]
   },
   {
@@ -78,21 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "72601a1e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HCubature integral of sqrt(1 - x^2) from -1 to 1: 1.570796326801314 with error: 1.1137781910334396e-10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "integral2, err2 = hcubature(x -> sqrt(1 - x[1]^2), [-1.0], [1.0], rtol=1e-10)\n",
-    "println(\"HCubature integral of sqrt(1 - x^2) from -1 to 1: \", integral2, \" with error: \", err2)"
+    "integral3, err3 = hcubature(x -> sqrt(1 - x[1]^2), [-1.0], [1.0], rtol=1e-10)\n",
+    "println(\"HCubature integral of sqrt(1 - x^2) from -1 to 1: \", integral3, \" with error: \", err3)"
    ]
   }
  ],
